# BookTranslator

./: .gitignore  CMakeLists.txt  EncodeAndDecode.py  EpubTranslator.cpp  EpubTranslator.h  GUI.cpp  GUI.h  PDFParser.cpp  PDFParser.h  PDFTranslator.cpp  PDFTranslator.h  PDFTranslator.py  PrepModelTest.py  README.md  Translator.h  automatedEvaluateModel.ipynb  evaluateModel.ipynb  evaluationConfig.json  extractImage.py  fineTuneModel.ipynb  main.cpp  main.h  multiLingual.py  multiprocessTranslation.py  nameTest.py  oldMultiProcess.py  onnx-manual.cpp  onnxGenerate.py  onnxManual.py  onnxManual2.py  output.epub  prepModel.py  readEncodedData.py  requirements.txt  tokenizeRawTags.py  tokenizer.py  trainModel.ipynb  trainModel.py  trainModelWithCheckpoints.ipynb  translatedTags.txt  (+6 more)
cmake/: Info.plist
onnx-model-dir/: config.json  generation_config.json  tokenizer_config.json  vocab.json
resources/: BookTranslator.icns
src/: Document.h  DocxTranslator.cpp  DocxTranslator.h  EpubTranslator.cpp  EpubTranslator.h  GUI.cpp  GUI.h  HTMLTranslator.cpp  HTMLTranslator.h  PDFTranslator.cpp  PDFTranslator.h  Translator.h  TranslatorFactory.h  langcodes.h  main.cpp
tests/: BookTranslatorTests.cpp  BookTranslatorTests.h  EpubTranslatorTests.cpp
visualizations/: FYP.html
